<resources>
    <string name="app_name">Movie List</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="movie_summary_text" />
    <string name="movie_rating">Rate : %1$s</string>
    <string name="movie_release_date_text">Release Date: %1$s</string>
    <string name="this_is_the_poster_image">This is the poster image</string>
    <string name="release_date">\"Release date: \"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="profile">Profile</string>
    <string name="duplicate_random_movie">Add movie</string>
    <string name="logout">Logout</string>
    <string name="MOVIE_INTENT">movie</string>
    <string name="add_to_watch_list">add to watch list</string>
    <string name="add_movie_name">Movie name</string>
    <string name="add_movie">Add movie</string>
    <string name="addMovieName">Add movie name</string>
    <string name="addMovieGenre">Movie genre</string>
    <string name="addMovieReleaseDate">Release date 01/01/2020</string>
    <string name="add_movie_button">Add Movie</string>
    <string name="addMovieSummary">Movie summary</string>
    <string name="addMoviePostLink">Movie poster link</string>
    <string name="movie_name_text">Movie title</string>
    <string name="my_watch_list">My watch list</string>
    <string name="latest_movies">Latest Movies</string>
    <string name="now_playing">Now playing</string>
    <string name="top_rated">Top rated movies</string>
    <string name="popular_movies">Popular movies</string>
    <string name="upcoming_movies">Upcoming movies</string>
</resources>