<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.movies.create.AddMovieActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <EditText
            android:id="@+id/addMovieName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen16dp"
            android:layout_marginTop="@dimen/margin_24dp"
            android:layout_marginEnd="@dimen/dimen16dp"
            android:autofillHints=""
            android:hint="@string/addMovieName"
            android:inputType="textLongMessage"
            android:selectAllOnFocus="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/addMovieGenre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen16dp"
            android:layout_marginTop="@dimen/dimen16dp"
            android:layout_marginEnd="@dimen/dimen16dp"
            android:autofillHints=""
            android:hint="@string/addMovieGenre"
            android:inputType="textLongMessage"
            android:selectAllOnFocus="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/addMovieReleaseDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen16dp"
            android:layout_marginTop="@dimen/dimen16dp"
            android:layout_marginEnd="@dimen/dimen16dp"
            android:autofillHints=""
            android:hint="@string/addMovieReleaseDate"
            android:inputType="date"
            android:selectAllOnFocus="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/addMoviePostLink"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen16dp"
            android:layout_marginTop="@dimen/dimen16dp"
            android:layout_marginEnd="@dimen/dimen16dp"
            android:hint="@string/addMoviePostLink"
            android:inputType="text"
            android:selectAllOnFocus="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:autofillHints="" />

        <EditText
            android:id="@+id/addMovieSummary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="start|top"
            android:layout_marginStart="@dimen/dimen16dp"
            android:layout_marginTop="@dimen/dimen16dp"
            android:hint="@string/addMovieSummary"
            android:layout_marginEnd="@dimen/dimen16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:inputType="textMultiLine"
            android:autofillHints="" />

        <Button
            android:id="@+id/addMovieButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="@dimen/margin_24dp"
            android:layout_marginTop="@dimen/dimen16dp"
            android:layout_marginEnd="@dimen/margin_24dp"
            android:layout_marginBottom="@dimen/dimen_64dp"
            android:text="@string/add_movie_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addMovieSummary"
            app:layout_constraintVertical_bias="0.2" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>