<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.movies.show.MovieDetailActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                app:layout_constraintHorizontal_bias="0"
                android:id="@+id/imageCardView"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginLeft="@dimen/dimen16dp"
                android:layout_marginTop="@dimen/dimen16dp"
                android:layout_marginRight="@dimen/dimen16dp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:cardCornerRadius="@dimen/dimen8dp"
                android:layout_width="@dimen/detail_image_width"
                android:layout_height="@dimen/detail_image_height">
                <ImageView
                    android:id="@+id/detail_image_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/this_is_the_poster_image"
                    android:scaleType="fitXY"
                    app:layout_constraintBottom_toTopOf="@+id/detail_movie_summary"
                    tools:srcCompat="@tools:sample/backgrounds/scenic" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/detail_movie_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="@dimen/dimen16dp"
                android:text="@string/movie_name_text"
                android:textAllCaps="true"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="#0B0000"
                app:layout_constraintLeft_toRightOf="@id/imageCardView"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@id/imageCardView" />

            <TextView
                android:id="@+id/detail_movie_genre"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/dimen16dp"
                android:paddingRight="@dimen/dimen16dp"
                android:textAppearance="@style/TextAppearance.AppCompat"
                app:layout_constraintLeft_toRightOf="@id/imageCardView"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/detail_movie_name"
                android:text="@string/movie_rating" />

            <TextView
                android:id="@+id/detail_release_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/dimen16dp"
                android:paddingRight="@dimen/dimen16dp"
                android:textAppearance="@style/TextAppearance.AppCompat"
                app:layout_constraintLeft_toRightOf="@id/imageCardView"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/detail_movie_genre"
                android:text="@string/movie_release_date_text" />

            <TextView
                android:id="@+id/detail_movie_summary"
                android:layout_width="0dp"
                android:padding="@dimen/dimen16dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imageCardView"
                android:layout_margin="@dimen/dimen_4dp"
                android:text="@string/movie_summary_text" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
